src/snapshots/alyn__test-2.snap
---
source: src/main.rs
expression: "grammar::RValParser::new().parse(\"*x + (127b - +324) - -4 == **qwerty123 + asdf() - zxcv(1, 2)\")"
---
Ok(
    (((((*x + (127b - +324)) - -4) == **qwerty123) + asdf()) - zxcv(1, 2)),
)
