src/snapshots/alyn__test-3.snap
---
source: src/main.rs
expression: "grammar::StmtParser::new().parse(\"*lhs = 123 + *ptr;\")"
---
Ok(
    *lhs = (123 + *ptr);,
)
