src/snapshots/alyn__test-4.snap
---
source: src/main.rs
expression: "grammar::StmtParser::new().parse(\"let lhs = 123 + *ptr;\")"
---
Ok(
    let "lhs" = (123 + *ptr);,
)
