src/snapshots/alyn__test-5.snap
---
source: src/main.rs
expression: "grammar::StmtParser::new().parse(\"if 1 == 2 { lhs = 123; } else { ret asfd(); }\")"
---
Ok(
    if (1 == 2) {
        lhs = 123;
    } else {
        ret asfd();
    },
)
