src/snapshots/alyn__test-7.snap
---
source: src/main.rs
expression: "grammar::SubrDeclParser::new().parse(\"subr sumfib(n: nat) nat { ret n + sumfib(n - 1); }\")"
---
Ok(
    SubrDecl {
        name: "sumfib",
        params: [
            Param { name: "n", ty: Nat },
        ],
        ret_ty: Nat,
        body: [
            ret (n + sumfib((n - 1)));,
        ],
    },
)
