src/snapshots/alyn__test.snap
---
source: src/main.rs
expression: "grammar::RValParser::new().parse(\"&*x()\")"
---
Ok(
    &*x(),
)
